test/envoy/config_lds.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

dynamic_resources:
  lds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
        envoy_grpc:
          cluster_name: xds_cluster
  cds_config:
    api_config_source:
      api_type: GRPC
      refresh_delay: 3s
      grpc_services:
        envoy_grpc:
          cluster_name: xds_cluster    
static_resources:
  clusters:
  - name: xds_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    dns_refresh_rate: 500000000s
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: host.docker.internal, port_value: 7777 }}]
